--- a/src/estilos/var/_fuentes-colores.scss
+++ b/src/estilos/var/_fuentes-colores.scss
@@ -26,7 +26,6 @@ $font-weight-enlaces: $font-weight-p;
 }
 
 @mixin enlaces-fuente {
-  font-family: $font-family-cinzel;
   color: $blanco;
   font-size: $font-size-enlaces;
   font-weight: $font-weight-navegador;
